packagephp56/files/default/iptables
*filter 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Allow the following ports through from outside 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22  -j ACCEPT 
-A INPUT -s 66.135.49.30 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 115.248.143.0/255.255.255.248 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 59.162.46.192/255.255.255.224 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 115.248.143.0/255.255.255.248 -p tcp -m tcp --dport 5432 -j ACCEPT 
-A INPUT -s 59.162.46.192/255.255.255.224 -p tcp -m tcp --dport 5432 -j ACCEPT 

# Remove attacking IP after 24 hours 
-A INPUT -m recent --name portscan --remove 
-A FORWARD -m recent --name portscan --remove 

# Protecting portscans 
# Attacking IP will be locked for 24 hours (3600 x 24 = 86400 Seconds) 
-A INPUT -m recent --name portscan --rcheck --seconds 86400 -j DROP 
-A FORWARD -m recent --name portscan --rcheck --seconds 86400 -j DROP 


#for SMURF attack protection 
-A INPUT -p icmp -m icmp --icmp-type address-mask-request -j DROP 
-A INPUT -p icmp -m icmp --icmp-type timestamp-request -j DROP 

# Droping all invalid packets 
-A INPUT -m state --state INVALID -j DROP 
-A FORWARD -m state --state INVALID -j DROP 
-A OUTPUT -m state --state INVALID -j DROP 

#These rules add scanners to the portscan list, and log the attempt.
-A INPUT -p tcp -m tcp --dport 139 -m recent --name portscan --set -j LOG --log-prefix "portscan:"
-A INPUT -p tcp -m tcp --dport 139 -m recent --name portscan --set -j DROP
#
-A INPUT -j DROP
COMMIT
